feat(alerting): configure typed destinations
